microservices/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: milstd6016
  labels:
    name: milstd6016
    app: microservices
